Uppdaterat favicon, title element och meta element i index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="Logotype" href="logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Plan your perfect trip with our smart travel app. Discover destinations, explore attractions and restaurants, and create personalized itineraries for your next adventure." />
+
+  <meta name="keywords"
+    content="travel, trip planning, destinations, restaurants, attractions, travel guide, vacation ideas, sightseeing, local food, tours, explore, culture, hidden gems, travel tips, journey, adventure" />
+
+  <title>Trip Tailor</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
